--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
 
         <div id="slider"></div>
 
-        <div class="section"></div>
+        <div class="section">
+            <div class="section-one">
+                <h1>ABOUT</h1>
+
+            </div>
+
+            <div class="section-two">
+
+            </div>
+        </div>
     </div>
 
     <script>
