--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="js/main.js"></script>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
     <div class="wrap" id="wrap">
 
         <img id="open-menu" src="https://cdn0.iconfinder.com/data/icons/essentials-9/128/__Menu-256.png" alt="">
@@ -43,6 +44,10 @@
                 <div class="section-one-show2">
                     <h1>ME</h1>
                 </div>
+                <div class="section-one-show3">
+                    <h1>안녕하세요, 신입 웹 퍼블리셔 김민중입니다!</h1>
+                    <h1>저의 포트폴리오 사이트에 방문해주셔서 감사합니다.</h1>
+                </div>
 
                 <div class="section-one-about">
                     <div class="section-one-about-1">
@@ -62,11 +67,40 @@
                             <div>
                                 <img src="img/KakaoTalk_20220121_234401716.jpg" alt="">
                             </div>
-                            
                         </div>
-                        <div class="section-one-about-2-history"></div>
-                        <div class="section-one-about-2-license"></div>
+                        <div class="section-one-about-2-history">
+                            <p>2018. 08. 16. ~ 2021. 02. 26. <br>법률사무소 인율 재직</p>
+                            <p>2021. 09. 27. ~ 2022. 02. 22. <br>라인컴퓨터아트학원 반응형 UI/UX 웹퍼블리셔 디자인 과정 수료</p>
+                        </div>
+                        <div class="section-one-about-2-license">
+                            <p>2021. 07. 컴퓨터그래픽스운용기능사 필기 합격</p>
+                            <p>2022. 01. 웹디자인기능사 필기 합격</p>
+                        </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="section-two">
+                <div class="section-two-show1">
+                    <h1>#2 SKILS</h1>
+                </div>
+                <div class="section-two-show2">
+                    <h1>IN ADDITION</h1>
+                </div>
+
+                <div class="section-two-bg"></div>
+
+                <div class="section-two-skils">
+                    <canvas id="canvas1" width="500" height="500"></canvas>
+                    <div>
+                        <p>1. html의 기본 구조를 이해하며 다양한 콘텐츠를 표시하는 태그를 사용할 수 있습니다.</p>
+                        <p>2. css를 사용하여 동적인 스타일과 반응형 레이아웃 구현이 가능합니다.</p>
+                        <p>3. 자바스크립트 대신 scss를 사용하여 간단한 슬라이더 제작이 가능합니다.</p>
+                        <p>4. 자바스크립트를 사용하여 간단한 슬라이더 제작이 가능합니다.</p>
+                    </div>
+                </div>
+                <div class="section-two-skils1">
+                    <canvas id="canvas2" width="500" height="500"></canvas>
                 </div>
             </div>
         </div>
