--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
 
         <div class="section">
             <div class="section-one">
+                <div class="section-one-show3">
+                    <h1>안녕하세요, 신입 웹 퍼블리셔 김민중입니다!</h1>
+                    <h1>저의 포트폴리오 사이트에 방문해주셔서 감사합니다.</h1>
+                </div>
                 <div class="section-one-show1">
                     <h1>#1 ABOUT</h1>
                 </div>
                 <div class="section-one-show2">
                     <h1>ME</h1>
                 </div>
-                <div class="section-one-show3">
-                    <h1>안녕하세요, 신입 웹 퍼블리셔 김민중입니다!</h1>
-                    <h1>저의 포트폴리오 사이트에 방문해주셔서 감사합니다.</h1>
-                </div>
-
+                
                 <div class="section-one-about">
                     <div class="section-one-about-1">
                         <h1 id="profile">Profile</h1>
@@ -91,17 +91,26 @@
                 <div class="section-two-bg"></div>
 
                 <div class="section-two-skils">
-                    <canvas id="canvas1" width="500" height="500"></canvas>
-                    <div>
-                        <p>1. html의 기본 구조를 이해하며 다양한 콘텐츠를 표시하는 태그를 사용할 수 있습니다.</p>
-                        <p>2. css를 사용하여 동적인 스타일과 반응형 레이아웃 구현이 가능합니다.</p>
-                        <p>3. 자바스크립트 대신 scss를 사용하여 간단한 슬라이더 제작이 가능합니다.</p>
-                        <p>4. 자바스크립트를 사용하여 간단한 슬라이더 제작이 가능합니다.</p>
+                    <canvas id="canvas1" width="700" height="700"></canvas>
+
+                    <div class="talk1">
+                        html의 기본 구조를 이해하며 다양한 컨텐츠를 태그를 사용하여 제작할 수 있습니다.
+                    </div>
+
+                    <div class="talk2">
+                        css로 동적인 스타일과 <br>반응형 레이아웃을 구현할 수 있습니다.
                     </div>
                 </div>
-                <div class="section-two-skils1">
-                    <canvas id="canvas2" width="500" height="500"></canvas>
+            </div>
+
+            <div class="section-three">
+                <div class="section-three-show">
+                    <h1>그 외 제 작업물들을 보여드릴게요!</h1>
                 </div>
+            </div>
+
+            <div class="section-four">
+                
             </div>
         </div>
     </div>
