--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
                     <img src="img/design-bg-1.png" alt="" onclick="window.open('image==1.html')">
                     <img src="img/bg.png" alt="" onclick="window.open('image==2.html')">
                     <img src="img/contact.png" alt="" onclick="window.open('image==3.html')">
-                    <img src="img/works-bg1.png" alt="">
-                    <img src="img/works-bg2.png" alt="">
-                    <img src="img/menu.png" alt="">
-                    <img src="img/KakaoTalk_Photo_2022-02-04-10-56-00-002.jpeg" alt="">
-                    <img src="img/KakaoTalk_Photo_2022-02-04-10-56-00-004.jpeg" alt="">
-                    <img src="img/KakaoTalk_Photo_2022-02-04-10-56-00-005.jpeg" alt="">
+                    <img src="img/works-bg1.png" alt="" onclick="window.open('image==4.html')">
+                    <img src="img/works-bg2.png" alt="" onclick="window.open('image==5.html')">
+                    <img src="img/menu.png" alt="" onclick="window.open('image==6.html')">
+                    <img src="img/KakaoTalk_Photo_2022-02-04-10-56-00-002.jpeg" alt="" onclick="window.open('image==7.html')">
+                    <img src="img/KakaoTalk_Photo_2022-02-04-10-56-00-004.jpeg" alt="" onclick="window.open('image==8.html')">
+                    <img src="img/KakaoTalk_Photo_2022-02-04-10-56-00-005.jpeg" alt="" onclick="window.open('image==9.html')">
                     <h1>#3d blender</h1>
                     <h1>#photoshop</h1>
                 </div>
